syntax = "proto3";

package proto;

message PbInnerObject {
    double ra = 1;
    double dec = 2;
}
